# docs/swagger.yaml
@@ -600,6 +600,30 @@ paths:
       summary: Decline friend request
       tags:
       - Friend
+  /friends/get-pending-request-by-friend/{friend_wallet_address}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: friend wallet addres
+        in: path
+        name: friend_wallet_address
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dtos.PendingFriendResponse'
+        "400":
+          description: Invalid Request
+        "500":
+          description: Internal Server Error
+      summary: Get pending friend request by friend wallet address
+      tags:
+      - Friend
   /friends/get-pending-request/{user_wallet_address}:
     get:
       consumes:
