# routes/friend_routes.go
@@ -14,5 +14,6 @@ func FriendRoutes(api *gin.RouterGroup) {
 		friend.GET("/:user_wallet_address", controllers.GetFriend)
 		friend.POST("/alias", controllers.AddFriendNickname)
 		friend.GET("/get-pending-request/:user_wallet_address", controllers.GetPendingFriendRequest)
+		friend.GET("/get-pending-request-by-friend/:friend_wallet_address", controllers.GetPendingFriendRequestByFriendWalletAddress)
 	}
 }
